added app with mySQL; changed README

--- a/.env_sample
+++ b/.env_sample
@@ -1,1 +1,6 @@
 DJANGO_KEY=_django______secret______key_
+DB_NAME=mysql_db_name
+DB_USER=mysql_db_username
+DB_PASS=mysql_db_password
+DB_HOST=mysql_db_host
+DB_PORT=mysql_db_port
